# demo-cookie-weirdness

./: .gitignore  Makefile.toml  README.md
client/: Cargo.toml
client/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
