[package]
name = "server"
version = "0.1.0"
authors = ["Huston Bokinsky <huston@deepgram.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.3.0-beta.1"
actix-identity = "0.3.0-alpha.1"
actix-rt = "1"
actix-web = "3.0.0-beta.1"

anyhow = "1"
base64 = "0.12"
env_logger = "0.7"
tokio = { version = "0.2", features = ["time"] }
